# nedit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  shell.nix
res/: main_window.ui
src/: AppData.c  AppData.h  Dialog.c  Dialog.h  FileUtil.c  FileUtil.h  Main.c  Main.h  app_data.c  app_data.h  dialog.c  dialog.h  file_util.c  file_util.h  main.c  main.h
