cmake_minimum_required(VERSION 3.10)

project(NEdit LANGUAGES C)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK4 REQUIRED gtk4)

include_directories(${GTK4_INCLUDE_DIRS})
link_directories(${GTK4_LIBRARY_DIRS})
add_definitions(${GTK4_CFLAGS_OTHER})

add_executable(${PROJECT_NAME}
    ${CMAKE_SOURCE_DIR}/src/AppData.c
    ${CMAKE_SOURCE_DIR}/src/Dialog.c
    ${CMAKE_SOURCE_DIR}/src/FileUtil.c
    ${CMAKE_SOURCE_DIR}/src/Main.c
)

target_link_libraries(${PROJECT_NAME} ${GTK4_LIBRARIES})