cmake_minimum_required(VERSION 3.21)

project(nedit
    LANGUAGES C 
    VERSION 1.0.1
    DESCRIPTION "Text editor made with C and GTK"
)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK4 REQUIRED gtk4)

include_directories(${GTK4_INCLUDE_DIRS})
link_directories(${GTK4_LIBRARY_DIRS})
add_definitions(${GTK4_CFLAGS_OTHER})

add_executable(${PROJECT_NAME}
    ${CMAKE_SOURCE_DIR}/src/app_data.c
    ${CMAKE_SOURCE_DIR}/src/dialog.c
    ${CMAKE_SOURCE_DIR}/src/file_util.c
    ${CMAKE_SOURCE_DIR}/src/main.c
)

target_link_libraries(${PROJECT_NAME} ${GTK4_LIBRARIES})

install(TARGETS ${PROJECT_NAME} RUNTIME)

set(CPACK_PACKAGE_VENDOR "Damareon Carter")
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_SYSTEM_NAME ${CMAKE_SYSTEM_NAME})
set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})
set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE.md)
set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.md)

include(CPack)